
[package]
authors = ["Weiyuan Wu <weiyuan@crows.land>"]
categories = ["concurrency"]
description = "A zero-cost abstraction lock that helps check contention free algorithms."
edition = "2021"
license = "MIT"
name = "peace-lock"
readme = "README.md"
repository = "https://github.com/dovahcrow/peace-lock"
version = "0.1.3"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
owning_ref = {version = "0.4", optional = true}
serde = {version = "1", optional = true}

[features]
check = []
default = []
